--- a/MonogameButton/MonogameButton.csproj
+++ b/MonogameButton/MonogameButton.csproj
@@ -7,4 +7,7 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FormElementsLib\FormElementsLib\FormElementsLib.csproj" />
+  </ItemGroup>
 </Project>
